docs(prd): redefine Aurora as independent performance engine beyond Folia constraints